--- a/FreeAPS/Sources/Localizations/Main/ru.lproj/Localizable.strings
+++ b/FreeAPS/Sources/Localizations/Main/ru.lproj/Localizable.strings
@@ -974,7 +974,7 @@ Enact a temp Basal or a temp target */
 /* ---------------------------------------
   DASH strings
 */
-"Attach Pod" = "Attach Pod";
+"Attach Pod" = "Прикрепите Под";
 
 "Deactivate Pod" = "Деактивировать Pod";
 
@@ -1034,10 +1034,10 @@ Enact a temp Basal or a temp target */
 "Low Reservoir" = "Low Reservoir";
 
 /* Value text for no expiration reminder */
-"No Reminder" = "No Reminder";
+"No Reminder" = "Не напоминать";
 
 /* */
-"Scheduled Reminder" = "Scheduled Reminder";
+"Scheduled Reminder" = "Запланировать напоминание";
 
 /* */
 "Low Reservoir Reminder" = "Low Reservoir Reminder";
@@ -1089,10 +1089,10 @@ Enact a temp Basal or a temp target */
 "Insert Cannula" = "Вставьте катетер";
 
 /* */
-"Check Cannula" = "Check Cannula";
+"Check Cannula" = "Проверьте канюлю";
 
 /* */
-"Setup Complete" = "Setup Complete";
+"Setup Complete" = "Настройка завершена";
 
 /* */
 "Insulin Suspended" = "Insulin Suspended";
